VITP and Pop-out panel arrow fixes and other bugs
- Fixed bugs with the VITP pointer arrow not correctly appearing on the left-top and right-top locations where needed. This was mainly due to there now being both a :before and :after to create 2 triangles that overlap each other and there wasn't enough CSS to correctly position them both for all cases.
- The new pop-out panel that is largely used for the styles plugin had code to position it on the left if space is limited, however the CSS was missing to correctly position its pointer arrow in all cases too. These styles are now formatted to take advantage of .LESS features and make them much easier to maintain.
- Added an IE 8 custom border to both the VITP and the Pop-out menu since this browser doesn't support box-shadow which is now used for most borders.
- Fixed a minor syntax omission in the VITP and pop-out menu shadows that caused them to render incorrectly in all the IE's. Its now the same everywhere.

--- a/Plugins/ViperInlineToolbarPlugin/ViperInlineToolbarPlugin.css
+++ b/Plugins/ViperInlineToolbarPlugin/ViperInlineToolbarPlugin.css
@@ -23,8 +23,16 @@
             background-color: #FFF;
             color: #2b2b2b;
 
-        box-shadow: 0 0 8px rgba(0, 0, 0, 0.3), 0 0 1px rgba(0, 0, 0, 0.6);
+        box-shadow: 0 0 8px rgba(0, 0, 0, 0.3), 0 0 0 1px rgba(0, 0, 0, 0.14);
     }
+
+    /* IE 8 needs a border to handle no box-shadow support */
+
+    .Viper-browserVer-msie8 .ViperITP {
+        border: 1px solid #BBB;
+    }
+
+    /* Positional tweaks for when the inline toolbar needs to point to the topbar */
 
     .ViperITP.Viper-forTopbar {
         z-index: 1000;
@@ -83,6 +91,7 @@
         }
 
         .Viper-browserVer-msie8 .ViperITP.Viper-forTopbar:before {
+
             /* Colours */
                 border-top-color: #919097;
         }
@@ -94,7 +103,7 @@
         }
 
         .ViperITP.Viper-orientationRight {
-            margin-left: 12px;
+            margin-left: 15px;
         }
 
         .ViperITP.Viper-orientationLeft:before {
@@ -106,7 +115,17 @@
             margin-left: 5px;
         }
 
+        .ViperITP.Viper-orientationLeft:after {
+            left: 0;
+            margin-left: 5px;
+        }
+
         .ViperITP.Viper-orientationRight:before {
+            left: 100%;
+            margin-left: -27px;
+        }
+
+        .ViperITP.Viper-orientationRight:after {
             left: 100%;
             margin-left: -25px;
         }
@@ -202,7 +221,7 @@
             padding-right: 0.4em;
         }
 
-        .ViperITP-lineage .ViperITP-lineageItem:last-child::after {
+        .ViperITP-lineage .ViperITP-lineageItem:last-child:after {
             display: none;
         }
 
@@ -273,7 +292,7 @@
     position: relative;
 }
 
- .ViperITP-lineage .ViperITP-lineageItem::after {
+ .ViperITP-lineage .ViperITP-lineageItem:after {
     content: "";
     position: absolute;
     right: 0;
@@ -287,7 +306,7 @@
 
 /* PNG fallback for older trowsers */
 
-    .Viper-browserVer-msie8  .ViperITP-lineage .ViperITP-lineageItem::after {
+    .Viper-browserVer-msie8  .ViperITP-lineage .ViperITP-lineageItem:after {
         background-image: url("../../Images/viperTools.png");
     }
 
